# Vision-Inspection-System

./: .env.example  .gitignore  FIXES_IMPLEMENTATION_SUMMARY.md  Fixes.md  README.md  SYSTEMATIC_VERIFICATION_REPORT.md  TECHNICAL_REVIEW_REPORT.md  UI_INTEGRATION_VERIFICATION_AND_REDESIGN.md  VERIFICATION_FIXES_STATUS.md  app.py  database.py  explanation.md  logger.py  main.py  models.py  pyproject.toml  report.md  requirements.txt  safety.py  test_explanation_parsing.py  ui.py  workflow.py
app/: __init__.py  main.py  ui.py
app/components/: __init__.py  chat_widget.py  decision_support.py  image_upload.py  inspection_progress.py  results_view.py  sidebar.py  verdict_display.py
app/services/: __init__.py  file_handler.py  session_manager.py
app/styles/: custom.css
config/: models.yaml  prompts.yaml  safety_rules.yaml
src/: __init__.py  chat_memory.py
src/agents/: __init__.py  auditor.py  base.py  explainer.py  inspector.py  vlm_auditor.py  vlm_inspector.py
src/database/: __init__.py  models.py  repository.py
src/orchestration/: __init__.py  graph.py  nodes.py  session_aggregation.py  state.py
src/reporting/: __init__.py  pdf.py  pdf_generator.py
src/safety/: __init__.py  consensus.py  defect_validator.py  gates.py  image_quality.py
src/schemas/: __init__.py  models.py
tests/: __init__.py  conftest.py  test_defect_validator.py  test_safety_gates.py
utils/: __init__.py  config.py  image_utils.py  logger.py  prompts.py  validators.py
