[project]
name = "vision-inspection-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.3",
    "alembic>=1.18.0",
    "black>=25.12.0",
    "colorlog>=6.10.1",
    "groq>=0.37.1",
    "httpx>=0.28.1",
    "huggingface-hub>=1.3.1",
    "langchain>=1.2.3",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.7",
    "langchain-groq>=1.1.1",
    "langgraph>=1.0.5",
    "langsmith>=0.6.2",
    "mypy>=1.19.1",
    "numpy>=2.4.1",
    "opencv-python>=4.11.0.86",
    "pillow>=12.1.0",
    "plotly>=6.5.1",
    "pre-commit>=4.5.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.21",
    "pyyaml>=6.0.3",
    "reportlab>=4.4.7",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "ruff>=0.14.11",
    "sqlalchemy>=2.0.45",
    "streamlit>=1.52.2",
    "tqdm>=4.67.1",
]
